--- a/graphviz_and_mermaid.html
+++ b/graphviz_and_mermaid.html
@@ -64,7 +64,28 @@
                       <a href="graphviz_and_mermaid.html">Graphviz/Mermaid</a>
                     </li>
                     <li>
-                      <a href="graphs.html">Graph Functions</a>
+                      <a href="ndfs_edfs.html">NDFs/EDFs</a>
+                    </li>
+                    <li>
+                      <a href="graph_creation.html">Graph Creation</a>
+                    </li>
+                    <li>
+                      <a href="selections.html">Selections</a>
+                    </li>
+                    <li>
+                      <a href="traversals.html">Traversals</a>
+                    </li>
+                    <li>
+                      <a href="inspection.html">Inspection</a>
+                    </li>
+                    <li>
+                      <a href="modification.html">Modification</a>
+                    </li>
+                    <li>
+                      <a href="deposit_values.html">Deposits</a>
+                    </li>
+                    <li>
+                      <a href="graph_series.html">Series</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
