--- a/traversals.html
+++ b/traversals.html
@@ -104,7 +104,7 @@
             <div class="col-md-9" role="main">
                 <div class="bs-docs-section">
                     <h1 id="traversals" class="page-header">Traversals</h1>
-                    <p class="lead">Traversals are important because...</p>
+                    <p class="lead">Traversals are important for selectively moving across the graph and gleaning information from nodes and edges.</p>
                     <h2 id="traversals-across-nodes">Traversals Across Nodes</h2>
                     <p></p>
                         <div>
