--- a/inspection.html
+++ b/inspection.html
@@ -104,7 +104,7 @@
             <div class="col-md-9" role="main">
                 <div class="bs-docs-section">
                     <h1 id="inspection" class="page-header">Inspection</h1>
-                    <p class="lead">Inspection is important because...</p>
+                    <p class="lead">Suppose you have a giant graph with many nodes and many edges. Moreover, the information contained within the nodes and edges is granular, highly specific, and perhaps obtained from data collection over varying periods of time. Chances are, if you're creating such a graph, you'll want to inspect parts of the graph (or get summaries of the entire graph) for reporting purposes. This is where <strong>DiagrammeR</strong>'s inspection functions are helpful. They make it rather easy to get the information you need from various facets of the graph.</p>
                     <h2 id="getting-summary-info-on-nodes-or-edges">Getting Summary Info on Nodes or Edges</h2>
                     <p></p>
                         <div>
