--- a/modification.html
+++ b/modification.html
@@ -104,7 +104,7 @@
             <div class="col-md-9" role="main">
                 <div class="bs-docs-section">
                     <h1 id="modification" class="page-header">Modification</h1>
-                    <p class="lead">Modification is important because...</p>
+                    <p class="lead">What's a graph library without the ability to modify the graph? The functions presented herein are all about changing the graph in specific ways. Whether it's adding a node here, an edge there, or deleting a whole swath of nodes, this sort of functionality is important.</p>
                     <h2 id="adding-a-node-or-edge-to-a-graph">Adding a Node or Edge to a Graph</h2>
                     <p>The <code>add_node()</code> and <code>add_edge()</code> functions provide a facility for adding a single node or edge to an existing graph. Although you may prepare node data frames (<em>NDF</em>s) or edge data frames (<em>EDF</em>s) and incorporate those into a new graph object with the <code>create_graph()</code> function, there may be new nodes or edges to add after creation of the graph object (say, as new data becomes available). After calling either of these functions, the new node or edge becomes part of the graph's internal <em>NDF</em> or <em>EDF</em>, respectively.</p>
                         <div>
