Add missing links to top navbar

--- a/deposit_values.html
+++ b/deposit_values.html
@@ -78,6 +78,9 @@
                     <li>
                       <a href="inspection.html">Inspection</a>
                     </li>
+                    <li>
+                      <a href="modification.html">Modification</a>
+                    </li>
                     <li class="active">
                       <a href="deposit_values.html">Deposits</a>
                     </li>
