--- a/graph_series.html
+++ b/graph_series.html
@@ -79,6 +79,9 @@
                       <a href="inspection.html">Inspection</a>
                     </li>
                     <li>
+                      <a href="modification.html">Modification</a>
+                    </li>
+                    <li>
                       <a href="deposit_values.html">Deposits</a>
                     </li>
                     <li class="active">
