--- a/modification.html
+++ b/modification.html
@@ -222,6 +222,8 @@ create_graph(graph_attrs =
   add_n_nodes(20) %>%
   render_graph
 
+<img src="img/adding-several-new-nodes-to-a-graph-1.png" class="img-responsive center-block">
+
 # Add 20 nodes of 4 different types to
 # an empty graph and then create edges
 # between them
@@ -233,7 +235,8 @@ create_graph(graph_attrs =
   add_n_nodes(5, "D") %>%
   add_edge_df(create_edges(1:19, 2:20)) %>%
   render_graph
-</code></pre>
+
+<img src="img/adding-several-new-nodes-to-a-graph-2.png" class="img-responsive center-block"></code></pre>
                     </div>
                     <h2 id="adding-several-new-nodes-to-or-from-a-selection-of-nodes">Adding Several New Nodes to or from a Selection of Nodes</h2>
                     <p></p>
