--- a/modification.html
+++ b/modification.html
@@ -209,7 +209,7 @@ get_edge_df(graph)
                         <pre><code class="prettyprint">###
 # Add several nodes with different
 # `type` attributes to the graph
-# with a the `add_n_nodes()`
+# with the `add_n_nodes()`
 # functions
 ###
 
@@ -240,7 +240,7 @@ create_graph(graph_attrs =
 <img src="img/adding-several-new-nodes-to-a-graph-2.png" class="img-responsive center-block"></code></pre>
                     </div>
                     <h2 id="adding-several-new-nodes-to-or-from-a-selection-of-nodes">Adding Several New Nodes to or from a Selection of Nodes</h2>
-                    <p></p>
+                    <p>Add a number of nodes to the graph by attaching them to (<code>add_n_nodes_to_selection()</code>) or from (<code>add_n_nodes_from_selection()</code>) a selection of nodes. The nodes created can be assigned a common value for their <code>type</code> attribute.</p>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
@@ -258,7 +258,46 @@ create_graph(graph_attrs =
                         </div>
                     <p></p>
                     <div>
-                        <pre><code class="prettyprint">
+                        <pre><code class="prettyprint">###
+# Add several nodes with different
+# `type` attributes to the graph
+# with `add_n_nodes_from_selection()`
+# and `add_n_nodes_to_selection()`
+###
+
+library(DiagrammeR)
+library(magrittr)
+
+# Create a graph with a central
+# node and multiples of children nodes
+create_graph(graph_attrs =
+               "output = visNetwork") %>%
+  add_node("A") %>% select_nodes %>%
+  add_n_nodes_from_selection(3, "B") %>%
+  clear_selection %>%
+  select_nodes("type", "B") %>%
+  add_n_nodes_from_selection(3, "C") %>%
+  clear_selection %>%
+  select_nodes("type", "C") %>%
+  add_n_nodes_from_selection(3, "D") %>%
+  render_graph
+
+<img src="img/adding-several-new-nodes-to-or-from-a-selection-of-nodes-1.png" class="img-responsive center-block">
+
+# Create a graph with two central
+# nodes with a high indegree and
+# outdegree
+create_graph(graph_attrs =
+               "output = visNetwork") %>%
+  add_n_nodes(2, "A") %>% add_edge(1, 2) %>%
+  select_nodes_by_id(1) %>%
+  add_n_nodes_to_selection(10, "B") %>%
+  clear_selection %>%
+  select_nodes_by_id(2) %>%
+  add_n_nodes_from_selection(10, "C") %>%
+  render_graph
+
+<img src="img/adding-several-new-nodes-to-or-from-a-selection-of-nodes-2.png" class="img-responsive center-block">
 </code></pre>
                     </div>
                     <h2 id="adding-nodes-or-edges-from-a-data-frame">Adding Nodes or Edges from a Data Frame</h2>
